# chem-to-struct

./: README.md  pyproject.toml
src/bio_aho_tagger/: __init__.py  bio_aho_tagger.py
src/bio_aho_tagger/scripts/: EFO_disease.py  __init__.py  chembl_smiles.py  extract_chembl.py  mesh_xml_utils.py  uniprot.py  utils.py
src/chem_to_struct/: __init__.py  chem_to_struct.py
src/chem_to_struct/scripts/: __init__.py  extract_chembl.py
