[project]
name = "bio_aho_tagger"
version = "0.1.0"
description = "Baseline dictionary based package to resolve chemical structures and tag biological entities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyahocorasick @ git+https://github.com/eloyfelix/pyahocorasick.git@394865c9df0ea0a0e6584de2b128cb06e43235ed"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["bio_aho_tagger/data/chembl_smiles.pkl", "bio_aho_tagger/data/efo_disease.pkl"]

[tool.hatch.build.targets.wheel]
packages = ["src/bio_aho_tagger"]

[tool.hatch.metadata]
allow-direct-references = true